# NoC-sim

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  journal.md
src/: CMakeLists.txt
src/Interface/: InterconnectApp.java  InterconnectGUI.java
src/Interface/exception/: SimulationException.java
src/Interface/gui/: ControlPanel.java  InterconnectFrame.java  LogPanel.java  ResultsPanel.java  SettingsPanel.java
src/Interface/model/: ArbiterType.java  RoutingType.java  SimulationConfig.java  SimulationResult.java  TopologyType.java  TrafficPatternType.java
src/Interface/service/: JsonConverter.java  NativeInterface.java  SimulationService.java
src/JNI/: CMakeLists.txt  Interface_service_NativeInterface.h  config_validator.cpp  config_validator.hpp  jni_wrapper.cpp  json_utils.cpp  json_utils.hpp  logger.hpp  simulation_runner.cpp  simulation_runner.hpp
src/interconnect/: CMakeLists.txt  Interconnect.hpp  arbiter.hpp  packet.hpp  port.hpp  router.cpp  router.hpp  rr_arbiter.hpp
src/interconnect/butterfly/: butterfly.cpp  butterfly.hpp
src/interconnect/core/: CMakeLists.txt  debug.hpp  interconnect.hpp  interconnect.tpp  packet.hpp  port.hpp  router.hpp  router.tpp  rr_arbiter.hpp
src/interconnect/mesh/: CmakeLists.txt  mesh.cpp  mesh.hpp  mesh.tpp  mesh_router.cpp  mesh_router.hpp  mesh_router.tpp  mesh_utils.hpp
src/interconnect/network/: CmakeLists.txt  network_node.cpp  network_node.hpp  network_node.tpp  packet_trace.cpp  packet_trace.hpp  simulation_controller.cpp  simulation_controller.hpp  simulation_controller.tpp
src/network/: network.hpp
src/simulation/: CMakeLists.txt  InterconnectConfig.hpp  InterconnectGUI.h  InterconnectSimulator.cpp  jni_wrapper.cpp
test_results/: 2x2_uniform.json  3x3_hotspot.json  4x4_transpose_results.json  4x4_transpose_trace.json  common_trace.json  compare_2x8.json  compare_4x4.json  generated_trace.json  loaded_trace_results.json  step_by_step.json
tests/: CMakeLists.txt  mesh_router_test.cpp  mesh_test.cpp  mesh_utils_test.cpp  port_test.cpp  router_test.cpp  rr_arbiter_test.cpp  simulation_test.cpp
